--- a/index.html
+++ b/index.html
@@ -23,16 +23,93 @@
 
 <body>
 
+
+  <script src="./js/jquery.mini.js"></script>
+  <script src="./js/quagga.mini.js"></script>
   <script src="./js/barcodes.mini.js"></script>
+  <script src="./js/file-input.js"></script>
   <script src="./js/scripts.js"></script>
 
   <!-- your content here... -->
-  <div class="column">
-    <div>Enter info to encode:</div>
-    <input id="text-input" type="text"></input>
-    <input id="sumbut-encode" type="submit" onclick="onPress()"></input>
-    <div class="error" id="error-text"></div>
-    <canvas id="barcode"></canvas>
+  <div class="content">
+
+
+    
+    <div class="column">
+      <div>Enter info to encode:</div>
+      <input id="text-input" type="text"></input>
+      <input id="sumbut-encode" type="submit" onclick="onPress()"></input>
+      <div class="error" id="error-text"></div>
+      <canvas id="barcode"></canvas>
+    </div>
+
+    <div class="column">
+      <div class="controls">
+        <fieldset class="input-group">
+            <input type="file" accept="image/*" capture="camera"/>
+            <button>Rerun</button>
+        </fieldset>
+        <!-- <fieldset class="reader-config-group">
+            <label>
+                <span>Barcode-Type</span>
+                <select name="decoder_readers">
+                    <option value="code_128" selected="selected">Code 128</option>
+                    <option value="code_39">Code 39</option>
+                    <option value="code_39_vin">Code 39 VIN</option>
+                    <option value="ean">EAN</option>
+                    <option value="ean_extended">EAN-extended</option>
+                    <option value="ean_8">EAN-8</option>
+                    <option value="upc">UPC</option>
+                    <option value="upc_e">UPC-E</option>
+                    <option value="codabar">Codabar</option>
+                    <option value="i2of5">Interleaved 2 of 5</option>
+                    <option value="2of5">Standard 2 of 5</option>
+                    <option value="code_93">Code 93</option>
+                </select>
+            </label>
+            <label>
+                <span>Resolution (long side)</span>
+                <select name="input-stream_size">
+                    <option value="320">320px</option>
+                    <option value="640">640px</option>
+                    <option selected="selected" value="800">800px</option>
+                    <option value="1280">1280px</option>
+                    <option value="1600">1600px</option>
+                    <option value="1920">1920px</option>
+                </select>
+            </label>
+            <label>
+                <span>Patch-Size</span>
+                <select name="locator_patch-size">
+                    <option value="x-small">x-small</option>
+                    <option value="small">small</option>
+                    <option value="medium">medium</option>
+                    <option selected="selected" value="large">large</option>
+                    <option value="x-large">x-large</option>
+                </select>
+            </label>
+            <label>
+                <span>Half-Sample</span>
+                <input type="checkbox" name="locator_half-sample" />
+            </label>
+            <label>
+                <span>Single Channel</span>
+                <input type="checkbox" name="input-stream_single-channel" />
+            </label>
+            <label>
+                <span>Workers</span>
+                <select name="numOfWorkers">
+                    <option value="0">0</option>
+                    <option selected="selected" value="1">1</option>
+                </select>
+            </label>
+        </fieldset> -->
+    </div>
+    <div id="result_strip">
+        <ul class="thumbnails"></ul>
+    </div>
+    <div id="interactive" class="viewport"></div>
+    <div id="debug" class="detection"></div>
   </div>
 
 </body>
